更改連結環境變數模式

--- a/render.yaml
+++ b/render.yaml
@@ -9,8 +9,7 @@ services:
     healthCheckPath: /healthz
     startCommand: npm run start
     buildCommand: npm install
-    envVarGroups:
-      - name: imgur-api
+    fromGroup: imgur-api
   - type: web
     name: image-manager
     env: static
