修改連結環境變數格式錯誤問題

--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,8 @@ services:
     healthCheckPath: /healthz
     startCommand: npm run start
     buildCommand: npm install
-    fromGroup: imgur-api
+    envVars:
+    - fromGroup: imgur-api
   - type: web
     name: image-manager
     env: static
