補上缺少的type參數

--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,7 @@ services:
     envVars:
       - key: VITE_API_DOMAIN
         fromService:
+          type: web
           name: image-uploader
           property: host
     routes:
